# kube-snapshot-manager

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
backend/: requirements.in  requirements.txt
backend/snapshot_manager/: app.py  config.py  context_vars.py  controller.py  generic_controller.py  kube_controller.py  logs.py  models.py  utils.py  ws_controller.py
backend/snapshot_manager/generic/: controller.py  debug.py
backend/tests/: test_generic.py
frontend/kube-snapshot-manager/: .eslintignore  .eslintrc.cjs  .prettierrc  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
frontend/kube-snapshot-manager/src/: stores.ts  types.ts
frontend/kube-snapshot-manager/src/components/: DebugSection.svelte  PVs.svelte  Snapshots.svelte  Volumes.svelte
frontend/kube-snapshot-manager/src/lib/: volumes.ts
frontend/kube-snapshot-manager/src/routes/: +layout.svelte  +page.svelte  Header.svelte  helpers.ts
frontend/kube-snapshot-manager/src/routes/debug/: +page.svelte
frontend/kube-snapshot-manager/src/routes/kube/[slug]/: +page.svelte  +page.ts
frontend/kube-snapshot-manager/src/routes/snapshots/: +page.svelte
frontend/kube-snapshot-manager/src/routes/snapshots/[slug]/: +page.svelte  +page.ts
