[project]
name = "snapshot_manager"


[tool.ruff]
line-length = 100
src = ["backend"]
select = [
  "E",     # pycodestyle
  "F",     # pyflakes
  "I",     # isort
  "G",     # flake8-logging-format
  "ASYNC", # flake8-async
  "PIE",   # flake8-pie
  "T20",   # flake8-print
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
]
ignore = [
  "Q001",
  "Q003",
  "G004"
]


[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
known-first-party = ["snapshot_manager"]
lines-after-imports = 2
lines-between-types = 1
no-lines-before = ["future", "standard-library"]
order-by-type = true
split-on-trailing-comma = false


[tool.ruff.format]
quote-style = "single"




[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "single"
